fix form alignment between viewpoints

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -89,6 +89,18 @@
                     margin: 0 auto;
                     width: 73.33%;
                 }
+                @media (min-width: 768px) and (max-width: 1000px) {
+                    margin-right: 10%;
+                }
+                @media (min-width: 1001px) and (max-width: 1024px) {
+                    margin-right: 20%;
+                }
+                @media (min-width: 1025px) and (max-width: 1240px) {
+                    margin-right: 128px;
+                }
+                @media (min-width: 1241px) {
+                    margin-right: 90px;
+                }
 
                 & > .footer-form-heading {
                     color: #FFFFFF;
